[gd_scene load_steps=4 format=3 uid="uid://kspesjnon7yp"]

[ext_resource type="Script" uid="uid://chru4df5d44h2" path="res://scripts/fight.gd" id="1_cic3x"]
[ext_resource type="Theme" uid="uid://dt3hbvp3xbydq" path="res://menus/themes/skill_tree.tres" id="2_5btyb"]
[ext_resource type="Texture2D" uid="uid://6umfcjdkejkb" path="res://icon.svg" id="3_4h40r"]

[node name="Fight" type="Node2D"]
script = ExtResource("1_cic3x")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 487.0
offset_top = 118.0
offset_right = 532.0
offset_bottom = 184.0

[node name="back" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="Skip" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Skip"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SelectedSkill" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Fight" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Fight"

[node name="EnemyDetails" type="VBoxContainer" parent="."]
process_mode = 3
offset_left = 948.3
offset_top = 20.0
offset_right = 1133.3
offset_bottom = 97.0

[node name="Name" type="Label" parent="EnemyDetails"]
layout_mode = 2
text = "enemy name"

[node name="Health" type="Label" parent="EnemyDetails"]
layout_mode = 2
text = "enemy health"

[node name="Affinity" type="Label" parent="EnemyDetails"]
layout_mode = 2
text = "Element at strenght 100"

[node name="PlayerDetails" type="VBoxContainer" parent="."]
process_mode = 3
offset_left = -1.0
offset_top = 19.0
offset_right = 103.0
offset_bottom = 96.0

[node name="BitterGem" type="Label" parent="PlayerDetails"]
layout_mode = 2
text = "Bittergems: #"

[node name="Health" type="Label" parent="PlayerDetails"]
layout_mode = 2
text = "Player health"

[node name="XP" type="Label" parent="PlayerDetails"]
layout_mode = 2
text = "XP: #/#"

[node name="GridContainer" type="GridContainer" parent="."]
process_mode = 3
offset_left = 286.0
offset_top = 487.0
offset_right = 326.0
offset_bottom = 527.0
columns = 2

[node name="DialogBox" type="Label" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_5btyb")
theme_override_font_sizes/font_size = 31
text = "battle messages go here"

[node name="Continue" type="TextureButton" parent="GridContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
keep_pressed_outside = true
texture_normal = ExtResource("3_4h40r")

[connection signal="pressed" from="VBoxContainer/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="VBoxContainer/Skip" to="." method="_on_skip_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Fight" to="." method="_on_fight_pressed"]
